[tool.pdm.scripts]
pyqradar = "python app.py {args}"

[project]
name = "pyQRadar"
version = "0.0.1"
description = ""
authors = [
    {name = "grantUser", email = "grantuser@skiff.com"},
]
dependencies = [
    "flask>=3.0.0",
    "waitress>=2.1.2",
    "PyYAML>=6.0.1",
    "flask-cors>=4.0.0",
    "flask-talisman>=1.1.0",
    "flask-socketio>=5.3.6",
    "photon-packet-parser>=0.1.2",
    "scapy>=2.5.0",
    "asyncio>=3.4.3",
    "gevent>=23.9.1",
    "gevent-websocket>=0.10.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

